@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- When using positional parameters, parameters with a default are now
+  optional. For named parameters, this was already the case.
+
+
 0.16     2016-11-03
 
 - Moose and Specio types (and coercions) which provide variables to close over
